--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -1,4 +1,3 @@
-
 body {
     margin-top: 40px;
     text-align: center;
@@ -7,248 +6,144 @@ body {
     vertical-align:text-top;
 }
 
-#calendar {
-    width: 900px;
-    margin: 0 auto;
-    float: right;
-}
 
-td{
-//    padding:8px;
+.room_title{
     border:1px solid black;
+    background-color:#94d3e6
 }
-span {
-        float: left;
-        margin-top: 17px;
-        text-align: center;
-        width: 100%;
-}
+.vert_time{
+    border-bottom:1px solid black;
+    color:white;
+    background-color:#2647A0;
+    width:100px;
+    min-width:100px;
 
-#meeting_selection {
-    float: left;
-    width: 150px;
-    padding: 0 10px;
-    border: 1px solid black;
-    text-align: left;
-    vertical-align:text-top;
+
 
 }
-
-#sortable { 
-    list-style-type: none; 
-    margin: 0; 
-    padding: 0; 
-    width: 1000px; 
-}
-
-#sortable li { 
-    margin: 3px 3px 3px 0; 
-    padding: 1px; 
-    float: left; 
-    width: 100px; 
-    height: 90px; 
-  //  font-size: 4em; 
-    text-align: center; 
-    border: 1px solid black;
-}
-
-#sortable-list { 
-    list-style-type: none; 
-    margin: 0; 
-    padding: 0; 
-    width: 100px; 
-}
-
-#sortable-list li { 
-    margin: 3px 3px 3px 0; 
-    padding: 1px; 
-    float: left; 
-    width: 100px; 
-//    height: 90px; 
-//    font-size: 4em; 
-    text-align: center; 
-    border: 1px solid black;
-}
-
-
-
-#meetings {
-    float: left;
-    width: 80%;
-
-    padding: 10px 10px;
-
-    text-align: center;
-//    background-color:grey;
-//    background-color:#ff7373;
-    background-color:rgb(255,240,240);
-//    filter:alpha(opacity=100);
-//    opacity:.1;
-    overflow:scroll;
-    border-radius: 15px;
-//    border: 1px solid black;
+.agenda_slot_title{
+    color:white;
+    background-color:#2647A0;
     
-}
-.room {
-    float: left;
-    width:100%;
-    height:100%;
-    border:2px solid red;
-//    padding:8px;
-}
-
-
-.small{
-    height:50px;
-    background:green;
-}
-
-
-.timeslot {
-    width:150px;
-    height:150px;
-    border:1px solid green;
-    padding: 2px;
-    
-
-
-}
-
-.obj {
-    width:150px;
-    height:150px;
-    border:1px solid blue;
-    Background: maroon;
-    float:left;
-    
-}
-
-
-/* Cell Styles
-------------------------------------------------------------------------*/
-.room_title /* tr th */  {
-  width:150px;
-  min-width:150px;
-  max-width:150px;
-  background-color:#A60000;
- /* // background-color:#C00000; */
-  border:1px solid black;
-  color:white;
-}
-
-/* 
-
-.cells tr td{
-  width:132px;
-  background-color:#dedede;
-  border:0px solid ;
-  border-bottom:2px dotted black;
-  height:64px;
-
-}
-
-... */
-
-.cells tr td{
-  /* width:132px; */
-  //background-color:#dedede;
- 
-  border:0px solid ;
-  border-bottom:1px solid black;
-
-  border-right:1px solid black;
-  height:64px;
-  border-radius: 3px;
-}
-
-.cells tr td.alt{
-  /* width:132px; */
-  background-color:#dedede;
- 
-  border:0px solid ;
-  border-bottom:1px solid black;
-
-  border-right:1px solid black;
-  height:64px;
-  border-radius: 3px;
-}
-
-
-/* .... */
-.vert_time
-{
-//  background:white;
-  background-color:#C00000;
-  color:white;
-  border:1px solid black;
-  width:32px;
-  font-size: 8px;
-  font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
-//  width:100px;
-//  height:32px;
-}
-
-
-/* .event_title */
-/* { */
-
-/* } */
-span.event_title{
-  background:aqua;
-  align:right;
 }
 
 table.meeting_event {
-    border:1px solid black;
-    background:#E0FFFF;
+    /* border:1px solid black; */
+    /* background:#E0FFFF; */
 
     border-radius: 4px;
-//    margin:8px;
-    width:160px;
+/* //    margin:8px; */
+    width:100px;
     /* width:100%; */
-    max-width:250px;
-    height:67px;
+    max-width:100px;
+    /* height:67px; */
     cursor:pointer;
 }
 
+
 .meeting_event th{
-//    background:#E6E6FA;
+    /* background:#E6E6FA; */
     padding:0px;
-    background-color:#ff7373;
+    /* background-color:#ff7373; */
+
+    border-radius: 4px;
+    background-color:#2b95b5;
+    color:white;
     font-size: 10px; 
     text-align:center;
     border:1px solid blue;
     height:8px;
   
 }
+/* #EDF5FF */
+.menu{
+    float:left;
+    border: 1px solid brown;
+}
 
-/* #meeting_event_title tr{ */
-/*     height:10px; */
-/*  //   background-color:#ff7373; */
-/* } */
+
+.wrapper{
+    width: 90%;
+    margin-left:160px;
+    height:90%;
+
+    /* float: left; */
+    /* height:1000px; */
+
+
+
+}
+.agenda{
+    float:left;
+    width:100%;
+    /* width:500px; */
+    /* height:500px; */
+
+
+}
+
+
+#CLOSE_IETF_MENUBAR{
+    border-radius: 4px;
+    background-color:#2b95b5;
+    color:white;
+    border:1px solid black; 
+    width:25px; 
+    height:15px; 
+    float:left;
+    cursor:pointer;
+
+}
+
+#session-info{
+    height:100px;
+
+    
+}
+
+#IETF_MENUBAR{
+    width:auto;
+
+}
+tr.agenda_slot{
+
+   height:50px;
+}
 
 .agenda_slot{
-  max-width:10px;
+    /* max-width:400px; */
+    /* max-height:400px; */
+    /* min-width:400px; */
+
+    background-color:white;
+    /* border-bottom: 1px solid black; */
+    /* border-right: 1px solid black; */
+    padding:0px;
+    /* padding:8px; */
+    /* min-height:500px; */
+    width:100px;
+    min-width:100px;
+}
+
+
+.agenda_div{
+    height:80%;
+    overflow-x:scroll;
+    /* margin-right: 50px; */
+    
+    
+
+
+}
+/* style="border:1px solid red; background:#A60000; color:white" */
+
+.bucket-list{
+    /* position: absolute; */
+    /* bottom:0; */
+    /* border:1px solid blue; */
+    height:50px;
+    border-bottom: 1px solid black;
 
 }
 
-.meeting_event tr td{
-  padding:0px;
-  background-color:white;
-  float: inherit;
-  font-size: 9px; 
-  text-align:left;
-  vertical-align:text-top;
-  /* width:128px; */
-  /* height:10px; */
-  width:100%;
-  
-  height:100%;
-  border:1px solid blue;
-  border-radius: 4px;
 
-
-}
-.ui-effects-transfer {
-    border: 1px dotted black;
-}
