additional tweaks to landscape mode

--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -102,26 +102,55 @@ console.log("{{t.id}}");
 {% endblock pagehead %}
 
 
-{% block content %}
+{% block noTable %}
+</tr></table></div>
+<div class="wrapper">
+<div style="ui-icon ui-icon-arrow-1-w" id="CLOSE_IETF_MENUBAR">
+<
 
-<div style="float: left; width:900px; overflow:scroll; height:800px;">
+</div>
+
+<div id="sortable-list" class="ui-droppable bucket-list room_title">
+	<div class="agenda_slot_title "><b>Unassigned Events:</b></div>
+</div>
+
+
+<div class="agenda_div">
+
+
+<!-- <div style="float: left; width:900px; overflow:scroll; height:800px;"> -->
   
 {% comment %} For each meeting day, we generate a table {% endcomment %}
 {% comment %} <button onclick="Dajaxice.ietf.meeting.sayhello(my_js_callback);">click me </button><!-- dajaxice example --> {% endcomment %}
 
 {% comment %} {% for day,value in date_slices.items %} {% endcomment %}
 
-<table id="meetings" class="ietf-navbar" style="width:100%"> 
+<table id="meetings" class="ietf-navbar" style="width:100%">
+  <th></th>
 {% for day in time_slices %} 
-  <th colspan="{{date_slices|colWidth:day|add:'1'}}" id="{{day}}-btn" style="border:1px solid red; background:#A60000; color:white">{{day}}</th>
+  <th colspan="{{date_slices|colWidth:day|add:'1'}}" id="{{day}}-btn" class="agenda_slot_title">{{day}}  </th>
 {% endfor %}
+    <tr>
+      <th></th>
+    {% for day in time_slices %}
+    
+      
+	  {% for slot in date_slices|lookup:day %}
+	      <th class="room_title">{{slot.0|date:'Hi'}}-{{slot.1|date:'Hi'}} </th>
+	  {% endfor %}
+
+    {% endfor %}
+
+
+
+
 
   {% for r in rooms %} 
-  <tr id="{{r|nospace}}"> 
+  <tr id="{{r|nospace}}" class="agenda_slot"> 
     <th class="vert_time">{{r}}</th>
     {% for day in time_slices %}
       {% for slot in date_slices|lookup:day %}
-        <td id="{{r|slugify}}_{{day}}_{{slot.0|date:'Hi'}}" class="agenda_slot {% cycle 'alt' '' %}" style="background:#606060 "></td>
+        <td id="{{r|slugify}}_{{day}}_{{slot.0|date:'Hi'}}" class="agenda_slot {% cycle 'alt' '' %}" ></td>
       {% endfor %}
     {% endfor %}
   </tr>
@@ -132,23 +161,45 @@ console.log("{{t.id}}");
 
 </div>
 
-<div class="ss_info">
+
+<div id="session-info" class="ui-droppable bucket-list room_title">
+  <div class="agenda_slot_title"><b>Session Information:</b></div>
+  <div class="ss_info">
   <table>
     <tr><td class="ss_info_name">Group:</td><td id="info_grp"></td></tr>
     <tr><td class="ss_info_name">Name:</td><td id="info_name"></td></tr>
     <tr><td class="ss_info_name">Area:</td><td id="info_area"></td></tr>
+    </table>
+  </div>
+  <div class="ss_info">
+    <table>
     <tr><td class="ss_info_name">Duration:</td><td id="info_duration"></td></tr>
     <tr><td class="ss_info_name">Location:</td><td id="info_location"></td></tr>
     <tr><td class="ss_info_name">Responsible AD:</td><td id="info_responsible"></td></tr>
     <tr><td class="ss_info_name">Requested By:</td><td id="info_requestedby"></td></tr>
   </table>
-
-
-<div id="sortable-list" style="float:left; border:1px solid black;  height:400px; width:200px;overflow:scroll;">
-	<div style="background-color:maroon; "><b>Unassigned Events:</b></div>
+  </div>
 </div>
 
-</div> 
+
+
+<!-- <div class="ss_info"> -->
+<!--   <table> -->
+<!--     <tr><td class="ss_info_name">Group:</td><td id="info_grp"></td></tr> -->
+<!--     <tr><td class="ss_info_name">Name:</td><td id="info_name"></td></tr> -->
+<!--     <tr><td class="ss_info_name">Area:</td><td id="info_area"></td></tr> -->
+<!--     <tr><td class="ss_info_name">Duration:</td><td id="info_duration"></td></tr> -->
+<!--     <tr><td class="ss_info_name">Location:</td><td id="info_location"></td></tr> -->
+<!--     <tr><td class="ss_info_name">Responsible AD:</td><td id="info_responsible"></td></tr> -->
+<!--     <tr><td class="ss_info_name">Requested By:</td><td id="info_requestedby"></td></tr> -->
+<!--   </table> -->
+
+
+<!-- <div id="sortable-list" style="float:left; border:1px solid black;  height:400px; width:200px;overflow:scroll;"> -->
+<!-- 	<div style="background-color:maroon; "><b>Unassigned Events:</b></div> -->
+<!-- </div> -->
+
+<!-- </div>  -->
 
 
 
