--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -9,7 +9,11 @@ body {
 
 .room_title{
     border:1px solid black;
-    background-color:#94d3e6
+    border-right:0px;
+    border-left:0px;
+    background-color:#94d3e6;
+
+
 }
 .vert_time{
     border-bottom:1px solid black;
@@ -58,28 +62,21 @@ table.meeting_event {
 /* #EDF5FF */
 .menu{
     float:left;
-    border: 1px solid brown;
 }
 
 
 .wrapper{
-    width: 90%;
+    /* width: 90%; */
+    width:auto;
     margin-left:160px;
+    margin-right:10px;
     height:90%;
-
-    /* float: left; */
-    /* height:1000px; */
-
-
-
+    border-right:1px solid black;
+    border-left:1px solid black;
 }
 .agenda{
     float:left;
     width:100%;
-    /* width:500px; */
-    /* height:500px; */
-
-
 }
 
 
@@ -97,8 +94,6 @@ table.meeting_event {
 
 #session-info{
     height:100px;
-
-    
 }
 
 #IETF_MENUBAR{
@@ -111,16 +106,8 @@ tr.agenda_slot{
 }
 
 .agenda_slot{
-    /* max-width:400px; */
-    /* max-height:400px; */
-    /* min-width:400px; */
-
-    background-color:white;
-    /* border-bottom: 1px solid black; */
-    /* border-right: 1px solid black; */
+    background-color:#E6E6E6;
     padding:0px;
-    /* padding:8px; */
-    /* min-height:500px; */
     width:100px;
     min-width:100px;
 }
@@ -129,12 +116,16 @@ tr.agenda_slot{
 .agenda_div{
     height:80%;
     overflow-x:scroll;
-    /* margin-right: 50px; */
-    
-    
+
+}
+
+#meetings{
+    border:0px;
 
 
 }
+
+
 /* style="border:1px solid red; background:#A60000; color:white" */
 
 .bucket-list{
@@ -147,3 +138,42 @@ tr.agenda_slot{
 }
 
 
+.ss_info{
+    
+    width:310px;
+    float:left;
+    margin-top:3px;
+    margin-left:3px;
+
+}
+/* #2647A0*/
+.ss_info table{
+
+    border-left: 1px solid #89D;
+    border-top: 1px solid #89D;
+    background-color: #EDF5FF;
+    border-spacing:0;
+
+}
+
+.ss_info tr{
+    /* border-right: 1px solid #89D; */
+    /* border-top: 1px solid #89D; */
+    border:1px soldi #89D
+}
+.ss_info td{
+    min-width:200px;
+/* //  border:1px soldi #89D; */
+    border: 0px;
+    border-bottom: 1px solid #89D;
+    border-right: 1px solid #89D;
+
+    text-align:left;
+    font-size: 12px;
+
+}
+
+.ss_info_name{
+
+    max-width:100px;
+}
