--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -38,13 +38,13 @@ function setup_slots(){
 {% for day in time_slices %}
 days.push("{{day}}");
 {% endfor %}
-{% for s in scheduledsessions %}
+{% for s in sessions %}
 	console.log("{{s.timeslot.id}}");
-var e_obj = new event_obj( "{{ s.session.short_name }}","{{ s.session.group.name }}","{{s.timeslot.location|slugify}}" ,"{{ s.timeslot.time|date:'Hi' }}", "{{s.timeslot.time|date:'Y-m-d'}}","{{s.id}}", "{{s.timeslot.id}}", "{{s.owner.owner}}");
+var e_obj = new event_obj( "{{ s.short_name }}","{{ s.group.name }}","{{s.id}}", "{{s.owner.owner}}");
+	$.extend(meeting_objs,{ "{{s.id}}":e_obj});
 {% endfor %}
 
 {% for s in scheduledsessions %}
-	$.extend(meeting_objs,{ "{{s.id}}":e_obj});
 var slot_status_id = { "{{s.timeslot.location|slugify}}_{{s.timeslot.time|date:'Y-m-d'}}_{{ s.timeslot.time|date:'Hi' }}":{"empty":false,"timeslot_id":"{{s.timeslot.id}}"} };
 $.extend(slot_status, slot_status_id);
 //console.log("{{s}}");
