additional fix for css

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -212,7 +212,7 @@ div.agenda_slot{
 .ss_info tr{
     /* border-right: 1px solid #89D; */
     /* border-top: 1px solid #89D; */
-    border:1px solid #89D
+    border:1px solid #89D;
     padding:0px;
     
 }
