--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -45,24 +45,26 @@ days.push("{{day}}");
 {% endfor %}
 
 {% for s in scheduledsessions %}
+
 	//console.log("{{s.timeslot.id}} is {{s.timeslot.js_identifier}}"); 
-
-        var s_obj= new slot_obj("{{s.empty_str}}", "{{s.timeslot.id}}", "{{s.session.id}}", "{{s.timeslot.location|slugify}}" ,"{{ s.timeslot.time|date:'Hi' }}", "{{s.timeslot.time|date:'Y-m-d'}}");
-
+        var s_obj= new slot_obj("{{s.empty_str}}", "{{s.timeslot.id}}", "{{s.session.id}}", "{{s.timeslot.location|slugify}}" ,"{{ s.timeslot.time|date:'Hi' }}", "{{s.timeslot.time|date:'Y-m-d'}}", "{{s.timeslot.js_identifier}}");
 	console.log("adding: {{s.timeslot.js_identifier}}");
         $.extend(slot_status, { "{{s.timeslot.js_identifier}}":s_obj });
+
 {% endfor %}
 
 console.log("setup_slots run");
 
-console.log(slot_status);
-console.log(meeting_objs);
+calculate_room_select_box();
+//console.log(slot_status);
+//console.log(meeting_objs);
 console.log("{{timeslots|length}}");
 
+{% comment %}
 {% for t in time_slices %}
 console.log("{{t.id}}");
 {% endfor %}
-
+{% endcomment %}
 
 }
 
