--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -88,7 +88,7 @@ console.log("{{t.id}}");
 </div>
 
 <div id="sortable-list" class="ui-droppable bucket-list room_title">
-	<div class="agenda_slot_title "><b>Unassigned Events:</b></div>
+	<div class="agenda_slot_title" ><b>Unassigned Events:</b></div>
 </div>
 
 
@@ -97,7 +97,7 @@ console.log("{{t.id}}");
 <table id="meetings" class="ietf-navbar" style="width:100%">
   <th></th>
 {% for day in time_slices %} 
-  <th colspan="{{date_slices|colWidth:day}}" id="{{day}}-btn" class="agenda_slot_title">{{day}}  </th>
+  <th colspan="{{date_slices|colWidth:day}}" id="{{day|date:'Y-m-d'}}-btn" class="agenda_slot_title">{{day|date:'D'}}&nbsp;({{day}})  </th>
 {% endfor %}
     <tr>
       <th></th>
