--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -252,6 +252,11 @@ div.agenda_slot{
   max-width:  150px;
 }
 
+.schedule_title {
+  font-size: 10px;
+  font-family: serif;  /* live life a bit */
+}
+
 
 /* ::-webkit-scrollbar{ */
 /*     width:3px; */
