session information table width fixes

--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -62,6 +62,7 @@ function setup_slots(){
 console.log("setup_slots run");
 
 calculate_room_select_box();
+calculate_name_select_box();
 console.log("{{timeslots|length}}");
 
 }
@@ -131,17 +132,17 @@ console.log("{{timeslots|length}}");
   <div class="agenda_slot_title"><b>Session Information:</b></div>
   <div class="ss_info">
   <table>
-    <tr><td class="ss_info_name">Group:</td><td id="info_grp"></td></tr>
-    <tr><td class="ss_info_name">Name:</td><td id="info_name"></td></tr>
-    <tr><td class="ss_info_name">Area:</td><td id="info_area"></td></tr>
+    <tr><td class="ss_info_name_short">Group:</td><td id="info_grp"></td></tr>
+    <tr><td class="ss_info_name_short">Name:</td><td id="info_name"></td></tr>
+    <tr><td class="ss_info_name_short">Area:</td><td id="info_area"></td></tr>
     </table>
   </div>
   <div class="ss_info ss_info_left">
     <table>
-    <tr><td class="ss_info_name">Duration:</td><td id="info_duration"></td></tr>
-    <tr><td class="ss_info_name">Location:</td><td id="info_location"></td></tr>
-    <tr><td class="ss_info_name">Responsible AD:</td><td id="info_responsible"></td></tr>
-    <tr><td class="ss_info_name">Requested By:</td><td id="info_requestedby"></td></tr>
+    <tr><td class="ss_info_name_long">Duration:</td><td id="info_duration"></td></tr>
+    <tr><td class="ss_info_name_long">Location:</td><td id="info_location"></td></tr>
+    <tr><td class="ss_info_name_long">Responsible AD:</td><td id="info_responsible"></td></tr>
+    <tr><td class="ss_info_name_long">Requested By:</td><td id="info_requestedby"></td></tr>
   </table>
   </div>
   <div class="agenda_save_box">
