--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -5,6 +5,12 @@
 
 {% load dajaxice_templatetags %}
 
+{% block morecss %}
+{% for area in area_list %}
+.{{ area.upcase_acronym}}-scheme, .meeting_event th.{{ area.upcase_acronym}}-scheme, #{{ area.upcase_acronym }}-groups, #selector-{{ area.upcase_acronym }} { color:{{ area.fg_color }}; background-color: {{ area.bg_color }} }
+{% endfor %}
+{% endblock morecss %}
+
 {% block title %}IETF {{ meeting.number }} Meeting Agenda{% endblock %}
 {% load agenda_custom_tags %}
 {% block pagehead %}
@@ -40,9 +46,12 @@ function setup_slots(){
 {% endfor %}
 
 {% for s in sessions %}
-    var e_obj = new event_obj( "{{ s.short_name }}","{{ s.group.name }}","{{s.id}}", "{{s.owner.owner}}");
-	//e_obj.slot_status_key = "blank{{s.timeslot.js_identifier}}"
-	$.extend(meeting_objs,{ "{{s.id}}":e_obj});
+    var e_obj = new event_obj( "{{ s.short_name }}",
+                               "{{ s.group.name }}",
+                               "{{s.id}}", 
+                               "{{s.owner.owner}}",
+                               "{{s.group.parent.acronym|upper}}");
+    $.extend(meeting_objs,{ "{{s.id}}":e_obj});
 {% endfor %}
 
 {% for s in scheduledsessions %}
@@ -155,6 +164,13 @@ console.log("{{timeslots|length}}");
       </form>
     </div>
   </div>
+
+  <div class="color_legend">
+{% for area in area_list %}
+    <span class="{{area.upcase_acronym}}-scheme">{{area.upcase_acronym}}</span>
+{% endfor %}
+  </div>
+
 </div>
 
 </div>
