--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -157,9 +157,8 @@ console.log("{{timeslots|length}}");
   <div class="agenda_save_box">
     <div id="agenda_title"><b>Agenda name: </b><span>{{schedule.name}}</span></div>
     <div id="agenda_saveas">
-      {% comment %} redo this with a Form {% endcomment %}
-      <form action="/meeting/85/agenda" method="POST">
-        <input type="text" name="savename" value="unnamed">
+      <form action="{{saveasurl}}" method="post">{% csrf_token %}
+        {{ saveas.as_p }}
         <input type="submit" name="saveas" value="saveas">
       </form>
     </div>
