Restructing how moving works, bucket list now considered a room, ajax calls turned off in this commit

--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -59,6 +59,9 @@ function setup_slots(){
     //$.extend(slot_status, { "{{s.timeslot.js_identifier}}":s_obj });
 {% endfor %}
 
+var s_obj= new slot_obj("Unassigned",true,"Unassigned",null,"Unassigned",null,null,"sortable-list");
+$.extend(slot_status, { "sortable-list" :[]});
+slot_status["sortable-list"].push(s_obj);
 console.log("setup_slots run");
 
 calculate_room_select_box();
