--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -161,6 +161,51 @@ console.log("{{timeslots|length}}");
     <tr><td class="ss_info_name_long">Requested By:</td><td id="info_requestedby"></td></tr>
   </table>
   </div>
+
+  <div id="conflict_table">
+    <table>
+      <tr>
+	<th class="heading" colspan=2>conflict 1</th>
+	<th class="border"></th>
+	<th class="heading" colspan=2>conflict 2</th>
+	<th class="border"></th>
+	<th class="heading" colspan=2>conflict 3</th>
+      </tr>
+      <tbody id="conflict_table_body">
+      <tr id="row01">
+	<td class="conflict1"></td>
+	<td class="conflict1"></td>
+	<td class="border"></td>
+	<td class="conflict2"></td>
+	<td class="conflict2"></td>
+	<td class="border"></td>
+	<td class="conflict3"></td>
+	<td class="conflict3"></td>
+      </tr>
+      <tr id="row02">
+	<td class="conflict1"></td>
+	<td class="conflict1"></td>
+	<td class="border"></td>
+	<td class="conflict2"></td>
+	<td class="conflict2"></td>
+	<td class="border"></td>
+	<td class="conflict3"></td>
+	<td class="conflict3 empty"></td>
+      </tr>
+      <tr id="row03">
+	<td class="conflict1 empty"></td>
+	<td class="conflict1 empty"></td>
+	<td class="border"></td>
+	<td class="conflict2 empty"></td>
+	<td class="conflict2 empty"></td>
+	<td class="border"></td>
+	<td class="conflict3 empty"></td>
+	<td class="conflict3 empty"></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
   <div class="agenda_save_box">
     <div id="agenda_title"><b>Agenda name: </b><span>{{schedule.name}}</span></div>
     <div id="agenda_saveas">
