--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -287,6 +287,37 @@ td.ss_info_name_short{
   padding-right: 4px;
 }
 
+div#conflict_table {
+  float: left;
+  margin-left: 10px;
+  margin-top:  3px;
+  
+}
+
+#conflict_table table {
+  border: 1px solid #89D;
+  background-color: #EDF5FF;
+  border-spacing:0;
+  border-collapse: collapse;
+}
+#conflict_table th.heading {
+  font-size: 14pt;
+  text-align: center;
+  min-width: 200px;
+  border-bottom: 2px solid #89D;
+}
+
+#conflict_table th.border {  
+  min-width: 0;
+  width: 2px;
+  border-bottom: 2px solid #89D;
+}
+
+#conflict_table td.border {
+  width: 2px;
+  background-color: #89D;
+}
+
 
 /* ::-webkit-scrollbar{ */
 /*     width:3px; */
