--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -146,64 +146,71 @@ function setup_slots(){
 
 <div id="session-info" class="ui-droppable bucket-list room_title">
   <div class="agenda_slot_title"><b>Session Information:</b></div>
-  <div class="ss_info">
-  <table>
-    <tr><td class="ss_info_name_short">Group:</td><td id="info_grp"></td></tr>
-    <tr><td class="ss_info_name_short">Name:</td><td id="info_name"></td></tr>
-    <tr><td class="ss_info_name_short">Area:</td><td id="info_area"></td></tr>
-    </table>
-  </div>
-  <div class="ss_info ss_info_left">
-    <table>
-    <tr><td class="ss_info_name_long">Duration:</td><td id="info_duration"></td></tr>
-    <tr><td class="ss_info_name_long">Location:</td><td id="info_location"></td></tr>
-    <tr><td class="ss_info_name_long">Responsible AD:</td><td id="info_responsible"></td></tr>
-    <tr><td class="ss_info_name_long">Requested By:</td><td id="info_requestedby"></td></tr>
-  </table>
-  </div>
-
-  <div id="conflict_table">
-    <table>
-      <tr>
-	<th class="heading" colspan=2>conflict 1</th>
-	<th class="border"></th>
-	<th class="heading" colspan=2>conflict 2</th>
-	<th class="border"></th>
-	<th class="heading" colspan=2>conflict 3</th>
-      </tr>
-      <tbody id="conflict_table_body">
-      <tr id="row01">
-	<td class="conflict1"></td>
-	<td class="conflict1"></td>
-	<td class="border"></td>
-	<td class="conflict2"></td>
-	<td class="conflict2"></td>
-	<td class="border"></td>
-	<td class="conflict3"></td>
-	<td class="conflict3"></td>
-      </tr>
-      <tr id="row02">
-	<td class="conflict1"></td>
-	<td class="conflict1"></td>
-	<td class="border"></td>
-	<td class="conflict2"></td>
-	<td class="conflict2"></td>
-	<td class="border"></td>
-	<td class="conflict3"></td>
-	<td class="conflict3 empty"></td>
-      </tr>
-      <tr id="row03">
-	<td class="conflict1 empty"></td>
-	<td class="conflict1 empty"></td>
-	<td class="border"></td>
-	<td class="conflict2 empty"></td>
-	<td class="conflict2 empty"></td>
-	<td class="border"></td>
-	<td class="conflict3 empty"></td>
-	<td class="conflict3 empty"></td>
-      </tr>
-      </tbody>
-    </table>
+  <div class="ss_info_box">
+    <div class="ss_info">
+      <table>
+	<tr><td class="ss_info_name_short">Group:</td><td id="info_grp"></td></tr>
+	<tr><td class="ss_info_name_short">Name:</td><td id="info_name"></td></tr>
+	<tr><td class="ss_info_name_short">Area:</td><td id="info_area"></td></tr>
+      </table>
+    </div>
+    <div class="ss_info ss_info_left">
+      <table>
+	<tr><td class="ss_info_name_long">Duration:</td><td id="info_duration"></td></tr>
+	<tr><td class="ss_info_name_long">Location:</td><td id="info_location"></td></tr>
+	<tr><td class="ss_info_name_long">Responsible AD:</td><td id="info_responsible"></td></tr>
+	<tr><td class="ss_info_name_long">Requested By:</td><td id="info_requestedby"></td></tr>
+      </table>
+    </div>
+    
+    <div id="conflict_table">
+      <table>
+	<tr>
+	  <th class="heading" colspan=2>conflict 1</th>
+	  <th class="border"></th>
+	  <th class="heading" colspan=2>conflict 2</th>
+	  <th class="border"></th>
+	  <th class="heading" colspan=2>conflict 3</th>
+	</tr>
+	<tbody id="conflict_table_body">
+	  <tr id="row01">
+	    <td class="conflict1"></td>
+	    <td class="conflict1"></td>
+	    <td class="border"></td>
+	    <td class="conflict2"></td>
+	    <td class="conflict2"></td>
+	    <td class="border"></td>
+	    <td class="conflict3"></td>
+	    <td class="conflict3"></td>
+	  </tr>
+	  <tr id="row02">
+	    <td class="conflict1"></td>
+	    <td class="conflict1"></td>
+	    <td class="border"></td>
+	    <td class="conflict2"></td>
+	    <td class="conflict2"></td>
+	    <td class="border"></td>
+	    <td class="conflict3"></td>
+	    <td class="conflict3 empty"></td>
+	  </tr>
+	  <tr id="row03">
+	    <td class="conflict1 empty"></td>
+	    <td class="conflict1 empty"></td>
+	    <td class="border"></td>
+	    <td class="conflict2 empty"></td>
+	    <td class="conflict2 empty"></td>
+	    <td class="border"></td>
+	    <td class="conflict3 empty"></td>
+	    <td class="conflict3 empty"></td>
+	  </tr>
+	</tbody>
+      </table>
+    </div>
+    <div class="color_legend">
+      {% for area in area_list %}
+      <span class="{{area.upcase_acronym}}-scheme"><input class='color_checkboxes' type="checkbox" id="{{area.upcase_acronym}}" value="{{area.upcase_acronym}}-value" checked>{{area.upcase_acronym}}</span>
+      {% endfor %}
+    </div>
   </div>
 
   <div class="agenda_save_box">
@@ -214,12 +221,6 @@ function setup_slots(){
         <input type="submit" name="saveas" value="saveas">
       </form>
     </div>
-  </div>
-
-  <div class="color_legend">
-{% for area in area_list %}
-    <span class="{{area.upcase_acronym}}-scheme"><input class='color_checkboxes' type="checkbox" id="{{area.upcase_acronym}}" value="{{area.upcase_acronym}}-value" checked>{{area.upcase_acronym}}</span>
-{% endfor %}
   </div>
 
 </div>
