--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -164,13 +164,12 @@ div.agenda_slot{
 
 
 #session-info{
-  height: 130px;
+  min-height: 150px;
   position: relative;
 }
 
 .ss_info{
-    
-    /* width:310px; */
+  /* width:310px; */
     float:left;
     margin-top:3px;
     margin-left:3px;
@@ -182,6 +181,13 @@ div.agenda_slot{
     width:410px;
 
 }
+
+.ss_info_box {
+  min-width: 1200px;
+  overflow-x: auto;
+}
+
+
 
 .ss_info button{
     border:1px solid black;
@@ -253,13 +259,14 @@ td.ss_info_name_short{
 
 
 .agenda_save_box {
+  position: absolute;
+  right:    3px;
+  bottom:   5px;
   border: 1px solid #89D;
   font-size: 11px;
   background-color: #EDF5FF;
-  position: absolute;
-  right:  3px;
   /* bottom: 3px; */
-   margin: 3px; 
+  margin: 3px; 
   /* margin-top:3px; */
   /* margin-bottom:3px; */
   padding: 5px;
@@ -288,7 +295,9 @@ td.ss_info_name_short{
 }
 
 div#conflict_table {
-  float: left;
+  position: absolute;
+  left: 690px;
+  top: 14px;
   margin-left: 10px;
   margin-top:  3px;
   
