renamed session info tables to left/right

--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -147,14 +147,14 @@ function setup_slots(){
 <div id="session-info" class="ui-droppable bucket-list room_title">
   <div class="agenda_slot_title"><b>Session Information:</b></div>
   <div class="ss_info_box">
-    <div class="ss_info">
+    <div class="ss_info ss_info_left">
       <table>
 	<tr><td class="ss_info_name_short">Group:</td><td id="info_grp"></td></tr>
 	<tr><td class="ss_info_name_short">Name:</td><td id="info_name"></td></tr>
 	<tr><td class="ss_info_name_short">Area:</td><td id="info_area"></td></tr>
       </table>
     </div>
-    <div class="ss_info ss_info_left">
+    <div class="ss_info ss_info_right">
       <table>
 	<tr><td class="ss_info_name_long">Duration:</td><td id="info_duration"></td></tr>
 	<tr><td class="ss_info_name_long">Location:</td><td id="info_location"></td></tr>
