added site_base_url to landscape template

--- a/ietf/templates/meeting/landscape_edit.html
+++ b/ietf/templates/meeting/landscape_edit.html
@@ -41,6 +41,7 @@ function my_js_callback(data){
 
 
 var meeting_base_url = "{{ meeting_base_url }}";
+var site_base_url = "{{ site_base_url }}";
 
 function setup_slots(){
 {% for day in time_slices %}
