--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -301,12 +301,12 @@ td.ss_info_name_short{
 }
 
 div#conflict_table {
+  font-size: 8pt;
   position: absolute;
   left: 620px;
   top: 14px;
   margin-left: 10px;
   margin-top:  3px;
-  
 }
 
 #conflict_table table {
@@ -347,6 +347,13 @@ div#conflict_table {
   background-color: red;
   text-decoration: line-through;
   
+}
+
+#spinner{
+
+  height:50%;
+  /* margin-top:50%; */
+  /* margin-bottom:50%; */
 }
 
 /* ::-webkit-scrollbar{ */
